attempted wrapping text in intro. fixed margin issues with cta

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,8 @@ body {
     align-items:center;
     justify-content: center;
     text-align:left;
-    gap:45px;
+    flex-wrap:wrap;
+    
     padding:50px;
 }
 
@@ -97,7 +98,7 @@ border-radius:15px;
     background-color:#3882F6;
     color:#FFFFFF;
     gap:300px;
-    margin:50px;
+    margin:100px 300px 100px 300px;
     border-radius:10px;
     display:flex;
     justify-content:center;
